analisis de datos de la temporada 24-25 del FC Barcelona

--- a/analisis.ipynb
+++ b/analisis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a500050a",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "79a8ad6c",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Se han cargado 370 filas del archivo data/SP1.csv.\n"
+      "No se encontró el archivo F-tbol-Club-Barcelona\\data\\SP1.csv.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:19: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:19: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\msarm\\AppData\\Local\\Temp\\ipykernel_2748\\2629739810.py:19: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  archivo = 'F-tbol-Club-Barcelona\\data\\SP1.csv'\n"
      ]
     }
    ],
